# rhg_compute_tools

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  dask_gateway_config.py  pytest.ini  requirements.txt  requirements_conda.txt  requirements_dev.txt  requirements_rtd.txt  rever.xsh  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml  python-publish.yml
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  rhg_compute_tools.design.rst  rhg_compute_tools.io_tools.rst  rhg_compute_tools.rst  usage.rst
rhg_compute_tools/: __init__.py  cli.py  functools  gcs.py  kubernetes.py  rhg_compute_tools.py  utils.py  xarray.py
rhg_compute_tools/design/: __init__.py  colors.py  plotting.py
rhg_compute_tools/design/styles/: rhg_note.mplstyle  rhg_powerpoint.mplstyle  rhg_powerpoint_wide.mplstyle
rhg_compute_tools/io_tools/: readers.py  writers.py
tests/: __init__.py  fixtures.py  set_gateway_config.py  test_cli.py  test_design.py  test_rhg_compute_tools.py  test_xarray_module.py
tests/resources/: worker_template.yml
