[bdist_wheel]
universal = 1

[flake8]
include = rhg_compute_tools tests
ignore =
	E402,  # module level import not at top of file
	E731,  # do not assign a lambda expression, use a def
	W503,  # line break before binary operator
	C405,  # Unnecessary (list/tuple) literal - rewrite as a set literal.
	C406,  # Unnecessary (list/tuple) literal - rewrite as a dict literal.
	C408,  # Unnecessary (dict/list/tuple) call - rewrite as a literal.
	C409,  # Unnecessary (list/tuple) passed to tuple() - (remove the outer call to tuple()/rewrite as a tuple literal).
	C410   # Unnecessary (list/tuple) passed to list() - (remove the outer call to list()/rewrite as a list literal).
max-line-length = 79
exclude = docs .tox .pytest_cache __pycache__ *.pyc *.pyo *.pyh

[aliases]
test = pytest

[options]
setup_requires = 
	setuptools_scm